--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxFilterBuilder.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxFilterBuilder.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="dxFilterBuilder1.Options" xml:space="preserve">
+    <value>{"fields":[{"caption":"ID","width":50,"dataField":"Product_ID","dataType":"number"},{"dataField":"Product_Name","dataType":"string"},{"caption":"Cost","dataField":"Product_Cost","dataType":"number","format":"currency"},{"dataField":"Product_Sale_Price","caption":"Sale Price","dataType":"number","format":"currency"},{"dataField":"Product_Retail_Price","caption":"Retail Price","dataType":"number","format":"currency"},{"dataField":"Product_Current_Inventory","dataType":"number","caption":"Inventory"}],"value":[["Product_Current_Inventory","&lt;&gt;",0],"or",[["Product_Name","contains","HD"],"and",["Product_Cost","&lt;",200]]]}</value>
+  </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
