--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion2.Demo/Component/LinearGauge.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion2.Demo/Component/LinearGauge.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="linearGauge1.Options" xml:space="preserve">
-    <value>{"width":"100%","height":"100%","container":{"type":"Thermometer","width":13,"roundedCornerRadius":5},"tooltip":{"enable":false},"majorTicks":{"interval":1},"minorTicks":{"interval":0.2},"pointers":[{"roundedCornerRadius":5,"type":"Bar","color":"#f02828"}]}</value>
+    <value>{"orientation":"Horizontal","axes":[{"pointers":[{"value":10,"height":15,"width":15,"placement":"Near","offset":-50,"markerType":"Triangle"}],"majorTicks":{"interval":10},"minorTicks":{"interval":2},"labelStyle":{"offset":48,"font":{"fontFamily":"Segoe UI"}}}],"annotations":[{"content":"&lt;div id=\"pointer\" style=\"width:70px\"&gt;&lt;h1 style=\"font-size:14px; font-family: Segoe UI;\"&gt;10 MPH&lt;/h1&gt;&lt;/div&gt;","axisIndex":0,"axisValue":10,"x":10,"zIndex":"1","y":-70}]}</value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
