--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Webix.Demo/Component/TimeLine.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Webix.Demo/Component/TimeLine.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="timeLine1.Options" xml:space="preserve">
-    <value>{"data":[{"id":1,"value":"Available","date":"2017-08-01"},{"id":2,"value":"Taken","details":"by Malcolm Merlyn","date":"2017-09-10"},{"id":3,"value":"Broken","date":"2017-12-11"},{"id":5,"value":"Fixed","date":"2018-02-10"},{"id":6,"value":"Available","date":"2018-03-15"},{"id":7,"value":"Taken","details":"by Rosa White","date":"2018-03-21"},{"id":8,"value":"Broken","date":"2019-05-16"},{"id":9,"value":"Fixed","date":"2019-06-02"},{"id":10,"value":"Available","date":"2019-09-10"},{"id":11,"value":"Deprecated","date":"2019-09-23"}]}</value>
+    <value>{"layout":"x","data":[{"id":1,"value":"Available","date":"2017-08-01"},{"id":2,"value":"Taken","details":"by Malcolm Merlyn","date":"2017-09-10"},{"id":3,"value":"Broken","date":"2017-12-11"},{"id":5,"value":"Fixed","date":"2018-02-10"},{"id":6,"value":"Available","date":"2018-03-15"},{"id":7,"value":"Taken","details":"by Rosa White","date":"2018-03-21"},{"id":8,"value":"Broken","date":"2019-05-16"},{"id":9,"value":"Fixed","date":"2019-06-02"},{"id":10,"value":"Available","date":"2019-09-10"},{"id":11,"value":"Deprecated","date":"2019-09-23"}]}</value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
