--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Component/kendoTreeList.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Component/kendoTreeList.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="kendoTreeList1.Options" xml:space="preserve">
-    <value>{"editable":"inline","columns":[{"field":"FirstName","title":"First Name","width":280,"template":"#photo-template"},{"field":"LastName","title":"Last Name","width":160},{"field":"Position"},{"field":"Phone","width":200},{"field":"Extension","width":140},{"field":"Address"}],"columnMenu":true}</value>
+    <value>{"editable":"inline","columns":[{"field":"FirstName","title":"First Name","width":280,"template":"#photo-template"},{"field":"LastName","title":"Last Name","width":160},{"field":"Position"},{"field":"Phone","width":200},{"field":"Extension","width":140},{"field":"Address"}],"columnMenu":true,"selectable":true}</value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
