--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxSparkline.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxSparkline.resx
@@ -144,6 +144,9 @@
   <data name="dxSparkline5.Options" xml:space="preserve">
     <value>{"dataSource":[{"month":1,"2010":17,"2011":30,"2012":27},{"month":2,"2010":28,"2011":28,"2012":33},{"month":3,"2010":34,"2011":34,"2012":35},{"month":4,"2010":37,"2011":37,"2012":32},{"month":5,"2010":47,"2011":47,"2012":30},{"month":6,"2010":37,"2011":37,"2012":28},{"month":7,"2010":34,"2011":34,"2012":27},{"month":8,"2010":40,"2011":40,"2012":27},{"month":9,"2010":41,"2011":41,"2012":31},{"month":10,"2010":30,"2011":30,"2012":34},{"month":11,"2010":34,"2011":34,"2012":31},{"month":12,"2010":32,"2011":32,"2012":33}],"argumentField":"month","valueField":"2011","lineColor":"#e8c267","firstLastColor":"#e55253","pointSize":6,"pointSymbol":"square","pointColor":"#ebdd8f","type":"stepline","tooltip":{"format":"currency"}}</value>
   </data>
+  <metadata name="colorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
