--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Component/igVideoPlayer.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Component/igVideoPlayer.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="igVideoPlayer1.Options" xml:space="preserve">
-    <value>{"sources":["https://dl.infragistics.com/pg/2011-1/web/shared/videoplayer/videos/big_buck_bunny.mp4","https://dl.infragistics.com/pg/2011-1/web/shared/videoplayer/videos/big_buck_bunny.webm","https://dl.infragistics.com/pg/2011-1/web/shared/videoplayer/videos/big_buck_bunny.ogv"],"width":"100%","posterUrl":"https://www.igniteui.com/images/samples/video-player/big-buck-bunny.png","fullscreen":false,"browserControls":false,"autoplay":false,"title":"Big Buck Bunny","muted":false,"autohide":false,"bookmarks":[{"title":"River","description":"River","time":13},{"title":"Big Buck Bunny Appears","description":"Big Buck Bunny Appears","time":33}]}</value>
+    <value>{"sources":["https://dl.infragistics.com/pg/2011-1/web/shared/videoplayer/videos/big_buck_bunny.mp4","https://dl.infragistics.com/pg/2011-1/web/shared/videoplayer/videos/big_buck_bunny.webm","https://dl.infragistics.com/pg/2011-1/web/shared/videoplayer/videos/big_buck_bunny.ogv"],"posterUrl":"https://www.igniteui.com/images/samples/video-player/big-buck-bunny.png","title":"Big Buck Bunny","muted":false,"autohide":false,"bookmarks":[{"title":"River","description":"River","time":13},{"title":"Big Buck Bunny Appears","description":"Big Buck Bunny Appears","time":33}]}</value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
