--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxChart.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxChart.resx
@@ -118,14 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="dxChart1.Options" xml:space="preserve">
-    <value>{"palette":"Violet","dataSource":[{"country":"USA","hydro":59.8,"oil":937.6,"gas":582,"coal":564.3,"nuclear":187.9},{"country":"China","hydro":74.2,"oil":308.6,"gas":35.1,"coal":956.9,"nuclear":11.3},{"country":"Russia","hydro":40,"oil":128.5,"gas":361.8,"coal":105,"nuclear":32.4},{"country":"Japan","hydro":22.6,"oil":241.5,"gas":64.9,"coal":120.8,"nuclear":64.8},{"country":"India","hydro":19,"oil":119.3,"gas":28.9,"coal":204.8,"nuclear":3.8},{"country":"Germany","hydro":6.1,"oil":123.6,"gas":77.3,"coal":85.7,"nuclear":37.8}],"commonSeriesSettings":{"argumentField":"country"},"margin":{"bottom":20},"argumentAxis":{"valueMarginsEnabled":false,"discreteAxisDivisionMode":"crossLabels","grid":{"visible":true}},"series":[{"valueField":"hydro","name":"Hydro-electric"},{"valueField":"oil","name":"Oil"},{"valueField":"gas","name":"Natural gas"},{"valueField":"coal","name":"Coal"},{"valueField":"nuclear","name":"Nuclear"}],"legend":{"verticalAlignment":"bottom","horizontalAlignment":"center","itemTextPosition":"bottom"},"title":{"text":"Energy Consumption in 2004","subtitle":{"text":"(Millions of Tons, Oil Equivalent)"}},"export":{"enabled":true},"tooltip":{"enabled":true}}</value>
+    <value>{"palette":"Violet","dataSource":[{"country":"USA","hydro":59.8,"oil":937.6,"gas":582,"coal":564.3,"nuclear":187.9},{"country":"China","hydro":74.2,"oil":308.6,"gas":35.1,"coal":956.9,"nuclear":11.3},{"country":"Russia","hydro":40,"oil":128.5,"gas":361.8,"coal":105,"nuclear":32.4},{"country":"Japan","hydro":22.6,"oil":241.5,"gas":64.9,"coal":120.8,"nuclear":64.8},{"country":"India","hydro":19,"oil":119.3,"gas":28.9,"coal":204.8,"nuclear":3.8},{"country":"Germany","hydro":6.1,"oil":123.6,"gas":77.3,"coal":85.7,"nuclear":37.8}],"commonSeriesSettings":{"argumentField":"country","type":"area"},"margin":{"bottom":20},"argumentAxis":{"valueMarginsEnabled":false,"discreteAxisDivisionMode":"crossLabels","grid":{"visible":true}},"series":[{"valueField":"hydro","name":"Hydro-electric"},{"valueField":"oil","name":"Oil"},{"valueField":"gas","name":"Natural gas"},{"valueField":"coal","name":"Coal"},{"valueField":"nuclear","name":"Nuclear"}],"legend":{"verticalAlignment":"bottom","horizontalAlignment":"center","itemTextPosition":"bottom"},"title":{"text":"Energy Consumption in 2004","subtitle":{"text":"(Millions of Tons, Oil Equivalent)"}},"export":{"enabled":true},"tooltip":{"enabled":true}}</value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
-        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EHAQAAAAABAAAAAQAAAAQU
-        U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAABf3///8UU3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAA
-        CAgCAAAAAAAAANMAAAAL
+        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EHAQAAAAABAAAAAAAAAAQU
+        U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAACw==
 </value>
   </metadata>
 </root>
