--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxForm.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxForm.resx
@@ -118,14 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="dxForm1.Options" xml:space="preserve">
-    <value>{"formData":{"ID":1,"Name":"Super Mart of the West","Address":"702 SW 8th Street","City":"Bentonville","State":"Arkansas","ZipCode":72716,"Phone":"(800) 555-2797","Fax":"(800) 555-2171","Website":"http://www.nowebsitesupermart.com"},"readOnly":false,"showColonAfterLabel":true,"labelLocation":"top","minColWidth":300,"colCount":2}</value>
+    <value>{"formData":{"ID":1,"Name":"Super Mart of the West","Address":"702 SW 8th Street","City":"Bentonville","State":"Arkansas","ZipCode":72716,"Phone":"(800) 555-2797","Fax":"(800) 555-2171","Website":"http://www.nowebsitesupermart.com"},"items":[{"dataField":"Name","validationRules":[{"type":"required","message":"Name must be there"}]},{"dataField":"Address"},{"dataField":"City"},{"dataField":"State"},{"dataField":"ZipCode"},{"dataField":"Phone"},{"dataField":"Fax"},{"dataField":"Website"}],"readOnly":false,"showColonAfterLabel":true,"labelLocation":"top","minColWidth":300,"colCount":2}</value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
-        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EHAQAAAAABAAAAAQAAAAQU
-        U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAABf3///8UU3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAA
-        CAgCAAAAAAAAANQAAAAL
+        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EHAQAAAAABAAAAAAAAAAQU
+        U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAACw==
 </value>
   </metadata>
 </root>
