--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxPolarChart.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Component/dxPolarChart.resx
@@ -118,14 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="dxPolarChart1.Options" xml:space="preserve">
-    <value>{"series":[{"type":"line"}],"legend":{"visible":false},"argumentAxis":{"inverted":true,"startAngle":90,"tickInterval":30},"export":{"enabled":true},"title":"Rose in Polar Coordinates","dataSource":[{"arg":0,"val":0},{"arg":30,"val":1.7},{"arg":45,"val":0},{"arg":60,"val":1.7},{"arg":90,"val":0},{"arg":120,"val":1.7},{"arg":135,"val":0},{"arg":150,"val":1.7},{"arg":180,"val":0},{"arg":210,"val":1.7},{"arg":225,"val":0},{"arg":240,"val":1.7},{"arg":270,"val":0},{"arg":300,"val":1.7},{"arg":315,"val":0},{"arg":330,"val":1.7},{"arg":360,"val":0}]}</value>
+    <value>{"series":[{"type":"scatter"}],"negativesAsZeroes":false,"legend":{"visible":false},"argumentAxis":{"inverted":true,"startAngle":90,"tickInterval":30},"export":{"enabled":true},"title":"Rose in Polar Coordinates","dataSource":[{"arg":"Monday","val":3},{"arg":"Tuesday","val":2},{"arg":"Wednesday","val":3},{"arg":"Thursday","val":-4},{"arg":"Friday","val":6},{"arg":"Saturday","val":11},{"arg":"Sunday","val":4}]}</value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
-        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EHAQAAAAABAAAAAQAAAAQU
-        U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAABf3///8UU3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAA
-        CAgCAAAAAAAAANMAAAAL
+        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EHAQAAAAABAAAAAAAAAAQU
+        U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAACw==
 </value>
   </metadata>
 </root>
