--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Component/kendoDropDownTree.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Component/kendoDropDownTree.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="kendoDropDownTree1.Options" xml:space="preserve">
-    <value>{"placeholder":"Select...","dataSource":[{"text":"Furniture","expanded":true,"items":[{"text":"Tables &amp; Chairs"},{"text":"Sofas"},{"text":"Occasional Furniture"}]},{"text":"Decor","items":[{"text":"Bed Linen"},{"text":"Curtains &amp; Blinds"},{"text":"Carpets"}]}]}</value>
+    <value>{"placeholder":"Select...","dataSource":[{"text":"Furniture","expanded":true,"items":[{"value":1,"text":"Tables &amp; Chairs"},{"value":2,"text":"Sofas"},{"value":3,"text":"Occasional Furniture"},{"value":4,"text":"Patio Furniture"}]}],"autoSize":false}</value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
