--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Component/igMap.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Component/igMap.resx
@@ -118,20 +118,20 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="igMap1.Options" xml:space="preserve">
-    <value>{"windowRect":{"left":0.1,"top":0.1,"height":0.7,"width":0.7},"backgroundContent":{"type":"openStreet"},"series":[{"type":"geographicSymbol","name":"worldCities","dataSource":[{"Name":"London","Country":"England","Latitude":51.5,"Longitude":0.12},{"Name":"Berlin","Country":"Germany","Latitude":52.5,"Longitude":13.33},{"Name":"Moscow","Country":"Russia","Latitude":55.75,"Longitude":37.51},{"Name":"Sydney","Country":"Australia","Latitude":-33.83,"Longitude":151.2},{"Name":"Tokyo","Country":"Japan","Latitude":35.6895,"Longitude":139.6917},{"Name":"Seoul","Country":"South Korea","Latitude":37.5665,"Longitude":126.978},{"Name":"Delhi","Country":"India","Latitude":28.6353,"Longitude":77.225},{"Name":"Mumbai","Country":"India","Latitude":19.0177,"Longitude":72.8562},{"Name":"Manila","Country":"Philippines","Latitude":14.601,"Longitude":120.9762},{"Name":"Shanghai","Country":"China","Latitude":31.2244,"Longitude":121.4759},{"Name":"Mexico City","Country":"Mexico","Latitude":19.427,"Longitude":-99.1276},{"Name":"New York","Country":"United States","Latitude":40.7561,"Longitude":-73.987},{"Name":"Sao Paulo","Country":"Brasil","Latitude":-23.5489,"Longitude":-46.6388},{"Name":"Los Angeles","Country":"United States","Latitude":34.0522,"Longitude":-118.2434},{"Name":"Sofia","Country":"Bulgaria","Latitude":42.697845,"Longitude":23.321925}],"latitudeMemberPath":"Latitude","longitudeMemberPath":"Longitude","markerType":"automatic","markerCollisionAvoidance":"fade","markerOutline":"#b51c1c","markerBrush":"#b51c1c","showTooltip":true,"tooltipTemplate":"tooltipTemplate"}]}</value>
+    <value>{"windowRect":{"left":0.1,"top":0.1,"height":0.7,"width":0.7},"backgroundContent":{"type":"openStreet"},"series":[{"type":"geographicSymbol","name":"worldCities","dataSource":[{"name":"London","country":"England","latitude":51.5,"longitude":0.12},{"name":"Berlin","country":"Germany","latitude":52.5,"longitude":13.33},{"name":"Moscow","country":"Russia","latitude":55.75,"longitude":37.51},{"name":"Sydney","country":"Australia","latitude":-33.83,"longitude":151.2},{"name":"Tokyo","country":"Japan","latitude":35.6895,"longitude":139.6917},{"name":"Seoul","country":"South Korea","latitude":37.5665,"longitude":126.978},{"name":"Delhi","country":"India","latitude":28.6353,"longitude":77.225},{"name":"Mumbai","country":"India","latitude":19.0177,"longitude":72.8562},{"name":"Manila","Country":"Philippines","latitude":14.601,"longitude":120.9762},{"name":"Shanghai","country":"China","latitude":31.2244,"longitude":121.4759},{"name":"Mexico City","country":"Mexico","latitude":19.427,"longitude":-99.1276},{"name":"New York","country":"United States","latitude":40.7561,"longitude":-73.987},{"name":"Sao Paulo","country":"Brasil","latitude":-23.5489,"longitude":-46.6388},{"name":"Sofia","country":"Bulgaria","latitude":42.697845,"longitude":23.321925}],"latitudeMemberPath":"latitude","longitudeMemberPath":"longitude","markerType":"automatic","markerCollisionAvoidance":"fade","markerOutline":"#b51c1c","markerBrush":"#b51c1c","showTooltip":true,"tooltipTemplate":"tooltipTemplate"}]}</value>
   </data>
   <data name="widgetTemplate1.Template" xml:space="preserve">
     <value>&lt;table id="tooltipTable" &gt;
-            &lt;tr&gt;&lt;th class="tooltipHeading" colspan="2"&gt;${item.Name}, ${item.Country}&lt;/th&gt;&lt;/tr&gt;
-            &lt;tr&gt;
-                &lt;td&gt;Latitude:&lt;/td&gt;
-                &lt;td&gt;${item.Latitude}&lt;/td&gt;
-            &lt;/tr&gt;
-            &lt;tr&gt;
-                &lt;td&gt;Longitude:&lt;/td&gt;
-                &lt;td&gt;${item.Longitude}&lt;/td&gt;
-            &lt;/tr&gt;
-        &lt;/table&gt;</value>
+    &lt;tr&gt;&lt;th class="tooltipHeading" colspan="2"&gt;${item.name}, ${item.country}&lt;/th&gt;&lt;/tr&gt;
+    &lt;tr&gt;
+        &lt;td&gt;Latitude:&lt;/td&gt;
+        &lt;td&gt;${item.latitude}&lt;/td&gt;
+    &lt;/tr&gt;
+    &lt;tr&gt;
+        &lt;td&gt;Longitude:&lt;/td&gt;
+        &lt;td&gt;${item.longitude}&lt;/td&gt;
+    &lt;/tr&gt;
+&lt;/table&gt;</value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
