--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion2.Demo/Component/StockChart.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion2.Demo/Component/StockChart.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="stockChart1.Options" xml:space="preserve">
+    <value>{"chartArea":{"border":{"width":0}},"primaryYAxis":{"lineStyle":{"color":"transparent"},"majorTickLines":{"color":"transparent","width":0},"crosshairTooltip":{"enable":true}},"primaryXAxis":{"majorGridLines":{"color":"transparent"},"crosshairTooltip":{"enable":true}},"series":[{"type":"Candle"}],"tooltipRender":"(args)=&gt;renderTooltip","title":"AAPL Stock Price","tooltip":{"enable":true},"crosshair":{"enable":true}}</value>
+  </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
