--- a/Demos/Extensions/Wisej.DemoBrowser.CKEditor/Features.resx
+++ b/Demos/Extensions/Wisej.DemoBrowser.CKEditor/Features.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ckEditor1.Options" xml:space="preserve">
+    <value>{"toolbar":[{"name":"clipboard","groups":["clipboard","undo"],"items":["Cut","Copy","Paste","PasteText","PasteFromWord","-","Undo","Redo"]},{"name":"editing","groups":["find","selection","spellchecker"],"items":["Scayt"]},{"name":"links","items":["Link","Unlink","Anchor"]},{"name":"insert","items":["Image","Table","HorizontalRule","SpecialChar"]},{"name":"tools","items":["Maximize"]},{"name":"document","groups":["mode","document","doctools"],"items":["Source"]},{"name":"others","items":["-"]},"/",{"name":"basicstyles","groups":["basicstyles","cleanup"],"items":["Bold","Italic","Strike","-","RemoveFormat"]},{"name":"paragraph","groups":["list","indent","blocks","align","bidi"],"items":["NumberedList","BulletedList","-","Outdent","Indent","-","Blockquote"]},{"name":"styles","items":["Styles","Format"]},{"name":"about","items":["About"]}]}</value>
+  </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
