--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Component/kendoMultiSelect.resx
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Component/kendoMultiSelect.resx
@@ -117,6 +117,158 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="tagTextBoxDataSource.Text" xml:space="preserve">
+    <value>Adak,
+Akhiok,
+Akiak,
+Akutan,
+Alakanuk,
+Aleknagik,
+Allakaket,
+Ambler,
+Anaktuvuk Pass,
+Anchorage,
+Anderson,
+Angoon,
+Aniak,
+Anvik,
+Atka,
+Atqasuk,
+Bethel,
+Bettles,
+Brevig Mission,
+Buckland,
+Chefornak,
+Chevak,
+Chignik,
+Chuathbaluk,
+Clark's Point,
+Coffman Cove,
+Cold Bay,
+Cordova,
+Craig,
+Deering,
+Delta Junction,
+Dillingham,
+Diomede,
+Eagle,
+Edna Bay,
+Eek,
+Egegik,
+Ekwok,
+Elim,
+Emmonak,
+Fairbanks,
+False Pass,
+Fort Yukon,
+Galena,
+Gambell,
+Golovin,
+Goodnews Bay,
+Grayling,
+Gustavus,
+Holy Cross,
+Homer,
+Hoonah,
+Hooper Bay,
+Houston,
+Hughes,
+Huslia,
+Hydaburg,
+Juneau,
+Kachemak,
+Kake,
+Kaktovik,
+Kaltag,
+Kasaan,
+Kenai,
+Ketchikan,
+Kiana,
+King Cove,
+Kivalina,
+Klawock,
+Kobuk,
+Kodiak,
+Kotlik,
+Kotzebue,
+Koyuk,
+Koyukuk,
+Kupreanof,
+Kwethluk,
+Larsen Bay,
+Lower Kalskag,
+Manokotak,
+Marshall,
+McGrath,
+Mekoryuk,
+Mountain Village,
+Napakiak,
+Napaskiak,
+Nenana,
+New Stuyahok,
+Newhalen,
+Nightmute,
+Nikolai,
+Nome,
+Nondalton,
+Noorvik,
+North Pole,
+Nuiqsut,
+Nulato,
+Nunam Iqua,
+Nunapitchuk,
+Old Harbor,
+Ouzinkie,
+Palmer,
+Pelican,
+Pilot Point,
+Pilot Station,
+Platinum,
+Point Hope,
+Port Alexander,
+Port Heiden,
+Port Lions,
+Quinhagak,
+Ruby,
+Russian Mission,
+Saint Paul,
+Sand Point,
+Savoonga,
+Saxman,
+Scammon Bay,
+Selawik,
+Seldovia,
+Seward,
+Shageluk,
+Shaktoolik,
+Shishmaref,
+Shungnak,
+Sitka,
+Soldotna,
+St. George,
+St. Mary's,
+St. Michael,
+Stebbins,
+Tanana,
+Teller,
+Tenakee Springs,
+Thorne Bay,
+Togiak,
+Toksook Bay,
+Unalakleet,
+Unalaska,
+Upper Kalskag,
+Utqiaġvik(Barrow),
+Valdez,
+Wainwright,
+Wales,
+Wasilla,
+Whale Pass,
+White Mountain,
+Whittier,
+Wrangell,
+,</value>
+  </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
